<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipChildren="false">

    <LinearLayout
        android:id="@+id/component"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="2dp">

        <EditText
            android:id="@+id/editTextToken"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Access_token"/>

        <EditText
            android:id="@+id/editTextTokenSecret"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Access_token_secret"/>

        <Button
            android:id="@+id/btnLogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/Get_started"/>
    </LinearLayout>

    <include
        layout="@layout/loader"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="16dp"/>
</FrameLayout>